developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/OJSERLIB__VEDA_Personal_Insolvency__c.object-meta.xml
<CustomObject>
    <label>VEDA Personal Insolvency</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>VEDA Personal Insolvency</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Personal Insolvencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>