developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Administration_District__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Administration_District__c</fullName>
    <label>Administration District</label>
    <length>3</length>
    <type>Text</type>
</CustomField>