developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Administration_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Administration_Number__c</fullName>
    <label>Administration Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>