developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Administration_Or_Petition_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Administration_Or_Petition_Type__c</fullName>
    <label>Administration Or Petition Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>