developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Administration_Year__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Administration_Year__c</fullName>
    <label>Administration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>