developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Co_Borrower__c</fullName>
    <label>Co Borrower</label>
    <length>40</length>
    <type>Text</type>
</CustomField>