developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Date_Declared__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Declared__c</fullName>
    <label>Date Declared</label>
    <type>Date</type>
</CustomField>