developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Insolvency_Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Insolvency_Status__c</fullName>
    <label>Insolvency Status</label>
    <length>28</length>
    <type>Text</type>
</CustomField>