developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Insolvency_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Insolvency_Status_Code__c</fullName>
    <label>Insolvency Status Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>