developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Insolvency_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Insolvency_Status_Date__c</fullName>
    <label>Insolvency Status Date</label>
    <type>Date</type>
</CustomField>