developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Proceedings_Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Proceedings_Status__c</fullName>
    <label>Proceedings Status</label>
    <length>7</length>
    <type>Text</type>
</CustomField>