developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Relationship__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Relationship__c</fullName>
    <label>Relationship</label>
    <length>30</length>
    <type>Text</type>
</CustomField>