developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Personal_Insolvency__c/fields/OJSERLIB__Relationship_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Relationship_Code__c</fullName>
    <label>Relationship Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>